--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
 <h1 id="zhehao-liang">Zhehao Liang</h1>
 <p><img src="https://github.com/px39n/Wheat-Counting-Update/blob/master/%E5%BE%AE%E4%BF%A1%E5%9B%BE%E7%89%87_20201105012601.jpg?raw=true" height="200"/></p>
-<p>Hello, I am currently applying for a PhD Candidate. I got a financial support from my former employer. In the future, I will cooperate with my friends from UK Germany, and China to publish ariticles under direction of my potential supervisor. I will deepen my machine learning skills and participate in Kaggle competitions.
+<p>Hello, I am currently applying for a PhD Candidate and I live in UK for now. I got a financial support from my former employer. In the future, I will cooperate with my friends from UK Germany, and China to publish ariticles under direction of my potential supervisor. I will deepen my machine learning skills and participate in Kaggle competitions.
 Therefore, I am willing to seize every moment of my time to fulfill my dream.  </p>
 <p>Research Interest: Earth Observation, Deep Learning, Time Series Analysis, Change Detection, Plant Phenotyping, Vegetation and Climate change, HD-Mapping.</p>
 <p>(Please check  interesting project demo in the previous work tab :D)</p>
@@ -108,7 +108,7 @@ Therefore, I am willing to seize every moment of my time to fulfill my dream.  <
 <li>Thesis: High precision map modeling based on crowdsourcing image for Auto-driving(pdf)</li>
 </ul>
 <h2 id="experience">Experience</h2>
-<p>2020.07 - Research Project, Present Remote Sensing and Information Engineering, Wuhan University</p>
+<p>2020.07-10 - Research Project, Present Remote Sensing and Information Engineering, Wuhan University</p>
 <ul>
 <li>Develop a deep learning algorithm for change detection of single and multi class. To develop the transfer
 learning from public dataset to GF2 Satellite image.</li>
