--- a/index.html
+++ b/index.html
@@ -94,9 +94,9 @@
 
 <h1 id="zhehao-liang">Zhehao Liang</h1>
 <p><img src="https://github.com/px39n/Wheat-Counting-Update/blob/master/%E5%BE%AE%E4%BF%A1%E5%9B%BE%E7%89%87_20201105012601.jpg?raw=true" height="200"/></p>
-<p>Hello, I am currently applying for a PhD Candidate and I live in UK for now. I got a financial support from my former employer. In the future, I will cooperate with my friends from UK Germany, and China to publish ariticles under direction of my potential supervisor. I will deepen my machine learning skills and participate in Kaggle competitions.
+<p>Hello, I am currently applying for a PhD Candidate and I live in Berlin for now. I got a scholarship from a company. In the future, I will cooperate with my friends from UK Germany, and China to publish ariticles under direction of my potential supervisor. I will deepen my machine learning skills and participate in Kaggle competitions.
 Therefore, I am willing to seize every moment of my time to fulfill my dream.  </p>
-<p>Research Interest: Earth Observation, Deep Learning, Time Series Analysis, Change Detection, Plant Phenotyping, Vegetation and Climate change, HD-Mapping.</p>
+<p>Research Interest: Earth Observation, Deep Learning, Environment monitoring, data fusion, Time Series Analysis, Change Detection, Plant Phenotyping, Vegetation and Climate change, HD-Mapping.</p>
 <p>(Please check  interesting project demo in the previous work tab :D)</p>
 <h2 id="educational-background">Educational Background</h2>
 <p>2014-2018 - Taiyuan University of Technology, Bachelor Degree of GIS</p>
@@ -108,16 +108,16 @@ Therefore, I am willing to seize every moment of my time to fulfill my dream.  <
 <li>Thesis: High precision map modeling based on crowdsourcing image for Auto-driving(pdf)</li>
 </ul>
 <h2 id="experience">Experience</h2>
-<p>2020.07-10 - Research Project, Present Remote Sensing and Information Engineering, Wuhan University</p>
+<p>2020.09-12 - Research assistant,  Remote Sensing and Information Engineering, Wuhan University</p>
 <ul>
 <li>Develop a deep learning algorithm for change detection of single and multi class. To develop the transfer
 learning from public dataset to GF2 Satellite image.</li>
 <li>Remote Sensing image process, including geometric, radiometric correction, pan sharpening.</li>
 </ul>
-<p>2020.02-2020.07 - Precision Agriculture, Zhirou ltd.</p>
+<p>2020.02-2021.02 - Spatial Decision Analysis, Zhirou ltd.</p>
 <ul>
-<li>Train a neural network for white spike counting</li>
-<li>Coding of Label Tool by python</li>
+<li>precision farming monitoring</li>
+<li>Commercial Location, Crowd profiling</li>
 </ul>
 <p>2019.10-2020.02 - Internship of GeoData Analysis , auto-driving algorithm engineer, Wayz.AI</p>
 <ul>
