--- a/index.html
+++ b/index.html
@@ -114,10 +114,11 @@ Therefore, I am willing to seize every moment of my time to fulfill my dream.  <
 learning from public dataset to GF2 Satellite image.</li>
 <li>Remote Sensing image process, including geometric, radiometric correction, pan sharpening.</li>
 </ul>
-<p>2020.02-2021.02 - Spatial Decision Analysis, Zhirou ltd.</p>
+<p>2020.02-2021.02 - Spatial Decision Analysis, Program Manager, Zhirou ltd.</p>
 <ul>
+<li>Spatial Location planning</li>    
 <li>precision farming monitoring</li>
-<li>Commercial Location, Crowd profiling</li>
+<li>Commercial Analysis, Crowd profiling</li>
 </ul>
 <p>2019.10-2020.02 - Internship of GeoData Analysis , auto-driving algorithm engineer, Wayz.AI</p>
 <ul>
