--- a/index.html
+++ b/index.html
@@ -94,58 +94,10 @@
 
 <h1 id="zhehao-liang">Zhehao Liang</h1>
 <p><img src="https://github.com/px39n/Wheat-Counting-Update/blob/master/%E5%BE%AE%E4%BF%A1%E5%9B%BE%E7%89%87_20201105012601.jpg?raw=true" height="200"/></p>
-<p>Hello, I am currently applying for a PhD Candidate and I live in Berlin for now. I got a scholarship from a company. In the future, I will cooperate with my friends from UK Germany, and China to publish ariticles under direction of my potential supervisor. I will deepen my machine learning skills and participate in Kaggle competitions.
-Therefore, I am willing to seize every moment of my time to fulfill my dream.  </p>
+<p>Hello, I am Zhehao Liang who study in TUB. I am planned to focus on publications this semester. Please contact me if you are interested.</p>
 <p>Research Interest: Earth Observation, Deep Learning, Environment monitoring, data fusion, Time Series Analysis, Change Detection, Plant Phenotyping, Vegetation and Climate change, HD-Mapping.</p>
 <p>(Please check  interesting project demo in the previous work tab :D)</p>
-<h2 id="educational-background">Educational Background</h2>
-<p>2014-2018 - Taiyuan University of Technology, Bachelor Degree of GIS</p>
-<ul>
-<li>Thesis: Use refined ASTER DEM to fill global SRTM DEM with ANN</li>
-</ul>
-<p>2018-2019 - University of Nottingham, Master Degree of Earth Observation</p>
-<ul>
-<li>Thesis: High precision map modeling based on crowdsourcing image for Auto-driving(pdf)</li>
-</ul>
-<h2 id="experience">Experience</h2>
-<p>2020.09-12 - Research assistant,  Remote Sensing and Information Engineering, Wuhan University</p>
-<ul>
-<li>Develop a deep learning algorithm for change detection of single and multi class. To develop the transfer
-learning from public dataset to GF2 Satellite image.</li>
-<li>Remote Sensing image process, including geometric, radiometric correction, pan sharpening.</li>
-</ul>
-<p>2020.02-2021.02 - Spatial Decision Analysis, Program Manager, Zhirou ltd.</p>
-<ul>
-<li>Spatial Location planning</li>    
-<li>precision farming monitoring</li>
-<li>Commercial Analysis, Crowd profiling</li>
-</ul>
-<p>2019.10-2020.02 - Internship of GeoData Analysis , auto-driving algorithm engineer, Wayz.AI</p>
-<ul>
-<li>Establish an auto pipeline for big geodata, including geographic fusion, crowdsourcing, geographic analysis.</li>
-<li>Analyze the feature and preferences of the population, produce the map for support decision making.</li>
-<li>Indoor map production. Optimization deep learning algorithm for HD-mapping </li>
-</ul>
-<p>2019.06-2019.10 - Research Project, Civil Engineering, University of Nottingham.</p>
-<ul>
-<li>Develop a Lane Segmentation algorithm for producing high precision cm level map for auto driving combining HPC.</li>
-<li>Using Structure from Motion system to restore the position of crowdsourcing camera.</li>
-</ul>
-<p>2017.06-07 - Practice, University of Wuhan</p>
-<ul>
-<li>Object classification extraction based on supervised learning</li>
-</ul>
-<p>2016.07-08 - Internship, Zhirou ltd Cooperation</p>
-<ul>
-<li>Virtual Reality modelling of exhibition of Taosi Ruins</li>
-</ul>
-<p>2015.06-07 - Internship, LinFen Urban Construction Bureau</p>
-<ul>
-<li>Remote Sensing Imagery Analysis and process(land use)</li>
-</ul>
-<p>2015.06-08 - Student team Manager (Zhi Zhuo Group)</p>
-<ul>
-<li>Gift recommendation system algorithm</li>
+
 </ul></div>
             </div>
         </div>
